added getToken method
