# src/main/resources/openapi/documentation.yaml
@@ -24,14 +24,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/User"
+              $ref: "#/components/schemas/Login"
       responses:
         200:
           description: ok
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/User"
+                $ref: "#/components/schemas/Login"
   /auth/registration:
     post:
       tags:
@@ -42,14 +42,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/User"
+              $ref: "#/components/schemas/Registration"
       responses:
         200:
           description: ok
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/User"
+                $ref: "#/components/schemas/Registration"
   /auth/changePassword:
     post:
       tags:
@@ -69,14 +69,29 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ChangePassword"
-  /auth/isChatIdExists/{chatId}:
+  /auth/isChatIdExists:
     get:
       tags:
         - auth
       description: Check user with chatId exists
       parameters:
         - name: chatId
-          in: path
+          in: query
+          required: true
+          schema:
+            type: string
+            format: int64
+      responses:
+        200:
+          description: "Ok"
+  /auth/getTokenByChatId:
+    get:
+      tags:
+        - auth
+      description: Get token by chat id
+      parameters:
+        - name: chatId
+          in: query
           required: true
           schema:
             type: string
@@ -325,7 +340,7 @@ components:
       scheme: bearer
       bearerFormat: JWT
   schemas:
-    User:
+    Registration:
       type: object
       properties:
         email:
@@ -340,6 +355,17 @@ components:
           type: string
           example: 48574987
           required: false
+    Login:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+          example: login@gm.com
+        password:
+          type: string
+          format: password
+          example: password
     ChangePassword:
       type: object
       properties:
